/*
 * $Id: ChangeLog,v 1.331 2007-03-30 01:52:37 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-03-29 20:03 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_textbox.prg
    ! Fixed TTextPicture() default value initialization.

2007-03-25 16:37 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  + include/i_activex.ch
  * include/oohg.ch
  + samples/oohg/activexdemo.prg
  * source/common_make.bat
  * source/makelib_bcc.bat
  * source/makelib_mingw.bat
  + source/h_activex.prg
    + ActiveX control added.

2007-03-24 23:05 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * doc/classes.txt
  * include/i_this.ch
  * include/i_window.ch
  * source/h_controlmisc.prg
  * source/h_windows.prg
    * Fixed some This.* issues.

2007-03-24 22:13 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * doc/classes.txt
  * include/oohg.h
  * source/c_controlmisc.c
  * source/h_menu.prg
  * source/h_toolbar.prg
  * source/h_windows.prg
    + ::Activate() method added.

2007-03-20 20:42 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_xbrowse.prg
    * Fixed default workarea when it's not defined.

2007-03-20 15:53 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
    * fixed colum count in excel and htmlprint

2007-03-19 14:38 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_controlmisc.c
  * source/h_controlmisc.prg
  * source/h_menu.prg
  * source/h_tab.prg
    * Fixed some bmp-related display issues.

2007-03-14 08:16 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_print.prg
    * ::End() OLE method calls must be invoked only for Harbour.
    * Moved oPrintExcel and oPrintHoja to class' properties.

2007-03-10 15:32 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_window.ch
    * Blank space added on LOAD WINDOW definition.