@@ -1,5 +1,5 @@
 /*
- * $Id: oohg.h,v 1.34 2007-03-25 04:14:36 guerra000 Exp $
+ * $Id: oohg.h,v 1.35 2007-03-30 03:30:17 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -183,7 +183,8 @@ DWORD _OOHG_RTL_Status( BOOL bRtl );
 #define s__ContextMenu         59
 #define s_Release              60
 #define s_Activate             61
-#define s_LastSymbol           62
+#define s_oOle                 62
+#define s_LastSymbol           63
 
 // Hack for MinGW and static functions (object's methods)
 #ifdef __MINGW32__
