@@ -1,11 +1,17 @@
 /*
- * $Id: ChangeLog,v 1.331 2007-03-30 01:52:37 guerra000 Exp $
+ * $Id: ChangeLog,v 1.332 2007-03-30 03:30:14 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-03-29 21:29 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * include/oohg.h
+  * source/c_controlmisc.c
+  * source/h_activex.prg
+    * Modified ::__Error handler method.
 
 2007-03-29 20:03 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_textbox.prg
